--- a/엄마양어디양_1.1_프로젝트파일/엄마양어디양_최종.vcxproj
+++ b/엄마양어디양_1.1_프로젝트파일/엄마양어디양_최종.vcxproj
@@ -149,10 +149,12 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Network.cpp" />
+    <ClCompile Include="Objects.cpp" />
     <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Network.h" />
+    <ClInclude Include="Objects.h" />
     <ClInclude Include="Protocol.h" />
     <ClInclude Include="resource1.h" />
     <ClInclude Include="stdafx.h" />
