이동 싱크구현 <문제점> 1. 서버의 사용자 ID관리 2. 충돌체크 3. 싱크가 안 맞음

--- a/엄마양어디양_1.1_프로젝트파일/엄마양어디양_최종.vcxproj
+++ b/엄마양어디양_1.1_프로젝트파일/엄마양어디양_최종.vcxproj
@@ -150,11 +150,13 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Network.cpp" />
     <ClCompile Include="Objects.cpp" />
+    <ClCompile Include="Player.cpp" />
     <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Network.h" />
     <ClInclude Include="Objects.h" />
+    <ClInclude Include="Player.h" />
     <ClInclude Include="Protocol.h" />
     <ClInclude Include="resource1.h" />
     <ClInclude Include="stdafx.h" />
