--- a/엄마양어디양_1.1_프로젝트파일/엄마양어디양_최종.vcxproj.filters
+++ b/엄마양어디양_1.1_프로젝트파일/엄마양어디양_최종.vcxproj.filters
@@ -40,6 +40,9 @@
     <ClInclude Include="Objects.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Player.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -52,6 +55,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Objects.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Player.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
