--- a/IOCP/IOCP.vcxproj
+++ b/IOCP/IOCP.vcxproj
@@ -148,10 +148,12 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Network.cpp" />
+    <ClCompile Include="Objects.cpp" />
     <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Network.h" />
+    <ClInclude Include="Objects.h" />
     <ClInclude Include="Protocol.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
