파일에러처리추가, 죽는 동안 카메라전환금지

--- a/SheepGame_Server/SheepGame_Server/SheepGame_Server.vcxproj
+++ b/SheepGame_Server/SheepGame_Server/SheepGame_Server.vcxproj
@@ -144,9 +144,11 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Network.cpp" />
+    <ClCompile Include="Objects.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Network.h" />
+    <ClInclude Include="Objects.h" />
     <ClInclude Include="Protocol.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
