--- a/SheepGame_Server/SheepGame_Server/SheepGame_Server.vcxproj.filters
+++ b/SheepGame_Server/SheepGame_Server/SheepGame_Server.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="Network.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Objects.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Network.h">
@@ -30,6 +33,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Protocol.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Objects.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
